<!--
  ~ This file is part of Butter.
  ~
  ~ Butter is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Butter is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Butter. If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:tools="http://schemas.android.com/tools"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	tools:context="butter.droid.ui.about.AboutFragment"
	tools:showIn="butter.droid.activities.AboutActivity"
	android:fitsSystemWindows="false"
	android:layout_width="match_parent">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<ImageView
			android:id="@+id/logo_imageview"
			android:layout_width="wrap_content"
			android:layout_margin="32dp"
			android:src="@drawable/butter_logo"
			android:layout_height="wrap_content" />

		<TextView
			android:id="@+id/message_textview"
			android:layout_width="wrap_content"
			android:layout_below="@+id/logo_imageview"
			android:layout_margin="16dp"
			android:text="@string/about_message"
			android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
			android:gravity="center"
			android:layout_height="wrap_content" />

		<GridLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:layout_marginBottom="16dp"
			android:layout_below="@id/message_textview"
			android:columnCount="3"
			android:layout_centerHorizontal="true">

			<TextView
				android:id="@+id/butter_button"
				android:drawableTop="@drawable/icon_butter"
				android:text="@string/website"
				style="@style/Theme.Butter.AboutButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />

			<TextView
				android:id="@+id/discuss_button"
				android:drawableTop="@drawable/icon_discourse"
				android:text="@string/forum"
				style="@style/Theme.Butter.AboutButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />

			<TextView
				android:id="@+id/twitter_button"
				android:drawableTop="@drawable/icon_twitter"
				android:text="@string/twitter"
				style="@style/Theme.Butter.AboutButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />

			<TextView
				android:id="@+id/facebook_button"
				android:drawableTop="@drawable/icon_facebook"
				android:text="@string/facebook"
				style="@style/Theme.Butter.AboutButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />

			<TextView
				android:id="@+id/git_button"
				android:drawableTop="@drawable/icon_git"
				android:text="@string/git"
				style="@style/Theme.Butter.AboutButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />

		</GridLayout>

	</RelativeLayout>

</ScrollView>
