<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of Popcorn Time.
  ~
  ~ Popcorn Time is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Popcorn Time is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Popcorn Time. If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<include layout="@layout/toolbar" />

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/toolbar">

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/activity_horizontal_margin"
			android:layout_marginRight="@dimen/activity_horizontal_margin"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:paddingBottom="@dimen/activity_vertical_margin">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/terms" />

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/activity_vertical_margin">

				<Button
					android:layout_weight="0.5"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/leave"
					android:backgroundTint="@color/red"
					android:onClick="leaveClick" />

				<Button
					android:layout_weight="0.5"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/accept"
					android:backgroundTint="@color/green"
					android:onClick="acceptClick" />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</RelativeLayout>